--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,8 @@ importFrom(testthat, context, test_check)
 importFrom(graphics, abline, barplot, legend, lines, par,
                      points, segments, smoothScatter, plot)
 importFrom(data.table, fread)
-importFrom(S4Vectors, metadata)
-importFrom(SummarizedExperiment, assay)
+importFrom(S4Vectors, metadata, DataFrame)
+importFrom(SummarizedExperiment, assay, colData)
 importFrom(stats, median, model.matrix, rgamma, rpois, runif, acf)
 importFrom(utils, packageVersion, write.table)
 importFrom(matrixStats, rowMeans2, colMeans2,
