--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ importFrom(graphics, abline, barplot, legend, lines, par,
                      points, segments, smoothScatter, plot)
 importFrom(data.table, fread)
 importFrom(S4Vectors, metadata, DataFrame)
-importFrom(SummarizedExperiment, assay, colData)
+importFrom(SummarizedExperiment, assayNames, colData)
 importFrom(stats, median, model.matrix, rgamma, rpois, runif, acf)
 importFrom(utils, packageVersion, write.table)
 importFrom(matrixStats, rowMeans2, colMeans2,
