Updated documentation for makeExampleBASiCS_Data function and import of assayNames

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,13 +28,13 @@ exportPattern("^[^\\Hidden]")
 import(KernSmooth)
 import(SingleCellExperiment)
 import(ggplot2)
-
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SingleCellExperiment,isSpike)
 importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,colData)
 importFrom(coda,HPDinterval)
 importFrom(coda,mcmc)
