--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.3.10
-Date: : 2018-09-28
+Version: 1.3.11
+Date: : 2018-09-30
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="cnvallej@uc.cl"), person("Nils", "Eling", 
-        role=c("aut"), email="eling@ebi.ac.uk"),  
+        role=c("aut"), email="eling@ebi.ac.uk"), 
+        person("Alan", "O'Callaghan", role = c("ctb"))
         person("Sylvia", "Richardson", role = c("ctb")), 
         person("John", "Marioni", role=c("ctb"))) 
 Maintainer: Catalina A. Vallejos <cnvallej@uc.cl>, Nils Eling <eling@ebi.ac.uk>
