--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,7 +63,7 @@ LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
 biocViews: Normalization, Sequencing, RNASeq, Software, 
         GeneExpression, Transcriptomics, SingleCell, 
-        DifferentialExpression, Bayesian, CellBiology
+        DifferentialExpression, Bayesian, CellBiology, ImmunoOncology
 SystemRequirements: C++11
 NeedsCompilation: yes
 URL: https://github.com/catavallejos/BASiCS
