Add diagPlot and diagHist functions
Add functions for visualising diagnostic measures from coda
(currently only effectiveSize and geweke.diag)
across multiple parameters simultaneuously.
geweke.diag is probably an odd inclusion and might be removed.
Also some incidental refactoring.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Imports:
     S4Vectors, 
     scran, 
     stats,
-    SummarizedExperiment, 
+    SummarizedExperiment,
+    viridis,
     testthat, 
     utils
 Suggests:
