--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
 export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
+export(diagHist)
+export(diagPlot)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
@@ -21,6 +23,8 @@ exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
 exportMethods(BASiCS_showFit)
 exportMethods(Summary)
+exportMethods(diagHist)
+exportMethods(diagPlot)
 exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
 exportMethods(plot)
@@ -37,7 +41,12 @@ importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,colData)
 importFrom(coda,HPDinterval)
+importFrom(coda,effectiveSize)
+importFrom(coda,gelman.diag)
+importFrom(coda,geweke.diag)
+importFrom(coda,heidel.diag)
 importFrom(coda,mcmc)
+importFrom(coda,raftery.diag)
 importFrom(data.table,fread)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
