--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,9 @@ importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,colData)
 importFrom(coda,HPDinterval)
 importFrom(coda,mcmc)
+importFrom(cowplot, plot_grid)
 importFrom(data.table,fread)
+importFrom(ggExtra, ggMarginal)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_hex)
