--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,18 +13,15 @@ export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
 export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
-export(diagHist)
-export(diagPlot)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
-export(plot)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
+exportMethods(BASiCS_diagHist)
+exportMethods(BASiCS_diagPlot)
 exportMethods(BASiCS_showFit)
 exportMethods(Summary)
-exportMethods(diagHist)
-exportMethods(diagPlot)
 exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
 exportMethods(plot)
