--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ exportMethods(plot)
 exportPattern("^[^\\Hidden]")
 import(KernSmooth)
 import(SingleCellExperiment)
-import(ggplot2)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(S4Vectors,DataFrame)
@@ -44,13 +43,19 @@ importFrom(data.table,fread)
 importFrom(ggExtra,ggMarginal)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
-importFrom(ggplot2,geom_hex)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(grDevices,adjustcolor)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,abline)
 importFrom(graphics,barplot)
