Fix some tests, move plots to function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,13 +12,13 @@ export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
 export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
+export(BASiCS_diagHist)
+export(BASiCS_diagPlot)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
-exportMethods(BASiCS_diagHist)
-exportMethods(BASiCS_diagPlot)
 exportMethods(BASiCS_showFit)
 exportMethods(Summary)
 exportMethods(displayChainBASiCS)
