--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,12 @@ export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
 export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
+export(BASiCS_showFit)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
-exportMethods(BASiCS_showFit)
 exportMethods(Summary)
 exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
