--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.5.15
-Date: : 2019-03-27
+Version: 1.5.16
+Date: : 2019-03-30
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="cnvallej@uc.cl"), person("Nils", "Eling", 
         role=c("aut"), email="eling@ebi.ac.uk"), 
@@ -35,9 +35,9 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
  mean/over-dispersion trend. 
 License: GPL (>= 2)
 Depends:
-    R (>= 3.6)
+    R (>= 3.6),
+    SingleCellExperiment
 Imports:
-    SingleCellExperiment,
     KernSmooth,
     ggplot2,
     BiocGenerics, 
