--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,9 +35,10 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
  mean/over-dispersion trend. 
 License: GPL (>= 2)
 Depends:
-    R (>= 3.6),
-    SingleCellExperiment
+    R (>= 3.6)
 Imports:
+    SingleCellExperiment,
+    Biobase,
     KernSmooth,
     ggplot2,
     BiocGenerics, 
