Namespace changes & comment helps in exampels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,12 +25,14 @@ exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
 exportMethods(plot)
 exportPattern("^[^\\Hidden]")
-import(KernSmooth)
-import(SingleCellExperiment)
+importClassesFrom(Biobase,Versioned)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
+importFrom(SingleCellExperiment,"isSpike<-")
+importFrom(SingleCellExperiment,clearSpikes)
+importFrom(SingleCellExperiment,counts)
 importFrom(SingleCellExperiment,isSpike)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assayNames)
@@ -50,7 +52,12 @@ importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_log10)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
