--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,14 @@ export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
 exportMethods(Summary)
+exportMethods(colnames)
 exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
 exportMethods(plot)
+exportMethods(rownames)
+exportMethods(show)
+exportMethods(subset)
+exportMethods(updateObject)
 exportPattern("^[^\\Hidden]")
 importClassesFrom(Biobase,Versioned)
 importFrom(MASS,mvrnorm)
