--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
  mean/over-dispersion trend. 
 License: GPL (>= 2)
 Depends:
-    R (>= 3.6),
+    R (>= 3.5),
     KernSmooth,
     SingleCellExperiment
 Imports:
@@ -57,7 +57,8 @@ Imports:
     stats,
     SummarizedExperiment,
     viridis,
-    utils
+    utils,
+    stats4
 Suggests:
     BiocStyle,
     knitr,
