--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,7 +69,6 @@ importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,par)
-importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,smoothScatter)
@@ -91,6 +90,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,rgamma)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stats4,plot)
 importFrom(utils,packageVersion)
 importFrom(utils,write.table)
 importFrom(viridis,scale_color_viridis)
