--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportMethods(subset)
 exportMethods(updateObject)
 exportPattern("^[^\\Hidden]")
 importClassesFrom(Biobase,Versioned)
+importFrom(KernSmooth,bkde2D)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(S4Vectors,DataFrame)
