--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.5.18
+Version: 1.5.19
 Date: : 2019-03-31
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
-        email="cnvallej@uc.cl"), person("Nils", "Eling", 
-        role=c("aut"), email="eling@ebi.ac.uk"), 
+        email="cnvallej@uc.cl"), 
+        person("Nils", "Eling", role=c("aut")), 
         person("Alan", "O'Callaghan", role = c("aut")),
         person("Sylvia", "Richardson", role = c("ctb")), 
         person("John", "Marioni", role=c("ctb"))) 
-Maintainer: Catalina A. Vallejos <cnvallej@uc.cl>
 Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
  heterogeneity in gene expression levels in seemingly homogeneous populations 
  of cells. However, these experiments are prone to high levels of technical 
