--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
 export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
+export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
