--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(BASiCS_DetectLVG)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
 export(BASiCS_MCMC)
+export(BASiCS_PlotOffset)
+export(BASiCS_ShowFit)
 export(BASiCS_Sim)
 export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
@@ -20,6 +22,7 @@ export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
+exportClasses(BASiCS_ResultsDE)
 exportClasses(BASiCS_Summary)
 exportMethods(Summary)
 exportMethods(colnames)
