vignette + sensible plot fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(BASiCS_DenoisedCounts)
 export(BASiCS_DenoisedRates)
 export(BASiCS_DetectHVG)
 export(BASiCS_DetectLVG)
+export(BASiCS_DiagHist)
+export(BASiCS_DiagPlot)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
 export(BASiCS_MCMC)
@@ -15,8 +17,6 @@ export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
 export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
-export(BASiCS_diagHist)
-export(BASiCS_diagPlot)
 export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
 export(makeExampleBASiCS_Data)
