--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(BASiCS_DenoisedCounts)
 export(BASiCS_DenoisedRates)
 export(BASiCS_DetectHVG)
 export(BASiCS_DetectLVG)
+export(BASiCS_EffectiveSize)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
 export(BASiCS_MCMC)
@@ -14,7 +15,6 @@ export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
 export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
-export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
