Rename hidden fn back

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(BASiCS_VarianceDecomp)
 export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
 export(BASiCS_showFit)
+export(HiddenBASiCS_MCMC_Start)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
