Consistent capitalisation of fn names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ export(BASiCS_DenoisedCounts)
 export(BASiCS_DenoisedRates)
 export(BASiCS_DetectHVG)
 export(BASiCS_DetectLVG)
+export(BASiCS_DiagHist)
+export(BASiCS_DiagPlot)
 export(BASiCS_EffectiveSize)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
 export(BASiCS_MCMC)
+export(BASiCS_ShowFit)
 export(BASiCS_Sim)
 export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
@@ -15,6 +18,7 @@ export(BASiCS_VarThresholdSearchLVG)
 export(BASiCS_VarianceDecomp)
 export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
+export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
 export(HiddenBASiCS_MCMC_Start)
 export(makeExampleBASiCS_Data)
