--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
+exportClasses(BASiCS_OffsetCorrected)
+exportClasses(BASiCS_ResultDE)
 exportClasses(BASiCS_ResultsDE)
 exportClasses(BASiCS_Summary)
 exportMethods(Summary)
