--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grDevices,adjustcolor)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,nclass.FD)
 importFrom(graphics,abline)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
