--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,12 +36,17 @@ importClassesFrom(Biobase,Versioned)
 importFrom(KernSmooth,bkde2D)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
-importFrom(SingleCellExperiment,"isSpike<-")
-importFrom(SingleCellExperiment,clearSpikes)
+importFrom(SingleCellExperiment,"altExp<-")
+importFrom(SingleCellExperiment,"altExpNames<-")
+importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SingleCellExperiment,altExp)
+importFrom(SingleCellExperiment,altExpNames)
 importFrom(SingleCellExperiment,counts)
-importFrom(SingleCellExperiment,isSpike)
+importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,colData)
@@ -92,6 +97,7 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slotNames)
+importFrom(scran,calculateSumFactors)
 importFrom(stats,acf)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
@@ -108,5 +114,4 @@ importMethodsFrom(BiocGenerics,counts)
 importMethodsFrom(BiocGenerics,rownames)
 importMethodsFrom(BiocGenerics,subset)
 importMethodsFrom(BiocGenerics,updateObject)
-importMethodsFrom(scran,computeSumFactors)
 useDynLib(BASiCS)
