--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.7.11
+Version: 1.7.12
 Date: : 2019-09-15
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
-        email="cnvallej@uc.cl"), 
+        email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
         person("Alan", "O'Callaghan", role = c("aut")),
         person("Sylvia", "Richardson", role = c("ctb")), 
