Switch from matrixStats to support Matrix classes.
This is done to support a broader array (haha)
of matrix classes as input. Previously
if you read in 10x data using DropletUtils (I think)
and some other packages you would generated
a SingleCellExperiment object with counts stored
as dgCMatrix. BASiCS_MCMC would fail because
matrixStats only supports base matrix classes
afaict.

Also add UTF8 encoding to stop roxygen complaining.

Add tests for Matrix and DelayedArray classes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,11 @@ exportPattern("^[^\\Hidden]")
 importClassesFrom(Biobase,Versioned)
 importFrom(KernSmooth,bkde2D)
 importFrom(MASS,mvrnorm)
+importFrom(Matrix,colMeans)
+importFrom(Matrix,colSums)
+importFrom(Matrix,rowMeans)
+importFrom(Matrix,rowSums)
+importFrom(Matrix,t)
 importFrom(Rcpp,evalCpp)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
@@ -87,10 +92,8 @@ importFrom(graphics,segments)
 importFrom(graphics,smoothScatter)
 importFrom(matrixStats,colMeans2)
 importFrom(matrixStats,colMedians)
-importFrom(matrixStats,colVars)
 importFrom(matrixStats,rowMeans2)
 importFrom(matrixStats,rowMedians)
-importFrom(matrixStats,rowVars)
 importFrom(methods,.hasSlot)
 importFrom(methods,Summary)
 importFrom(methods,is)
