Differential expression functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
 export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
+export(DiffRes)
+export(NDiffRes)
 export(displayChainBASiCS)
 export(displaySummaryBASiCS)
 export(makeExampleBASiCS_Data)
@@ -35,6 +37,8 @@ exportClasses(BASiCS_ResultDE)
 exportClasses(BASiCS_ResultsDE)
 exportClasses(BASiCS_Summary)
 exportMethods(BASiCS_PlotDE)
+exportMethods(DiffRes)
+exportMethods(NDiffRes)
 exportMethods(Summary)
 exportMethods(colnames)
 exportMethods(displayChainBASiCS)
