Add import of var from stats, remove rowVars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,rgamma)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stats,var)
 importFrom(stats4,plot)
 importFrom(utils,packageVersion)
 importFrom(utils,write.table)
