--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(BASiCS_DetectHVG)
 export(BASiCS_DetectLVG)
 export(BASiCS_DiagHist)
 export(BASiCS_DiagPlot)
+export(BASiCS_Draw)
 export(BASiCS_EffectiveSize)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
