--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: r
 
-r: bioc-devel
+r: 
+  - bioc-devel
+  - bioc-release 
+
+cache:
+  packages: true
 
 # Strict checks in place
 warnings_are_errors: false
@@ -13,14 +18,8 @@ r_github_packages:
   - jimhester/covr
   
 notifications:
-  email:
-    recipients:
-      - cvallejos@turing.ac.uk
     on_success: change # default: change
     on_failure: always # default: always
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
-  
-
-
