--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(coda,HPDinterval)
 importFrom(coda,effectiveSize)
 importFrom(coda,mcmc)
 importFrom(cowplot,plot_grid)
+importFrom(data.table,fread)
 importFrom(ggExtra,ggMarginal)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
