--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,20 +38,21 @@ Depends:
     SingleCellExperiment
 Imports:
     Biobase,
-    BiocGenerics,
-    coda,
+    BiocGenerics, 
+    coda, 
     cowplot,
+    data.table,
     ggExtra,
     ggplot2,
-    graphics,
+    graphics, 
     grDevices,
     KernSmooth,
-    MASS,
-    matrixStats,
-    methods,
-    Rcpp (>= 0.11.3),
-    S4Vectors,
-    scran,
+    MASS, 
+    matrixStats, 
+    methods, 
+    Rcpp (>= 0.11.3), 
+    S4Vectors, 
+    scran, 
     stats,
     stats4,
     SummarizedExperiment,
