--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.9.1
-Date: 2019-11-28
+Version: 1.9.2
+Date: 2019-12-04
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
@@ -34,25 +34,24 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
  mean/over-dispersion trend. 
 License: GPL (>= 2)
 Depends:
-    R (>= 3.6),
+    R (>= 3.0.0),
     SingleCellExperiment
 Imports:
     Biobase,
-    BiocGenerics, 
-    coda, 
+    BiocGenerics,
+    coda,
     cowplot,
-    data.table,
     ggExtra,
     ggplot2,
-    graphics, 
+    graphics,
     grDevices,
     KernSmooth,
-    MASS, 
+    MASS,
     matrixStats, 
     methods, 
-    Rcpp (>= 0.11.3), 
-    S4Vectors, 
-    scran, 
+    Rcpp (>= 0.11.3),
+    S4Vectors,
+    scran,
     stats,
     stats4,
     SummarizedExperiment,
@@ -73,5 +72,6 @@ SystemRequirements: C++11
 NeedsCompilation: yes
 URL: https://github.com/catavallejos/BASiCS
 BugReports: https://github.com/catavallejos/BASiCS/issues
-RoxygenNote: 7.0.1
+RoxygenNote: 7.0.2
 Encoding: UTF-8
+LazyData: true
