--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,11 +29,11 @@ export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
 exportMethods(Summary)
-exportMethods(colnames)
+exportMethods(dim)
+exportMethods(dimnames)
 exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
 exportMethods(plot)
-exportMethods(rownames)
 exportMethods(show)
 exportMethods(subset)
 exportMethods(updateObject)
