--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ importFrom(graphics,segments)
 importFrom(graphics,smoothScatter)
 importFrom(matrixStats,colMeans2)
 importFrom(matrixStats,colMedians)
+importFrom(matrixStats,colVars)
 importFrom(matrixStats,rowMeans2)
 importFrom(matrixStats,rowMedians)
 importFrom(methods,.hasSlot)
@@ -107,11 +108,13 @@ importFrom(methods,show)
 importFrom(methods,slotNames)
 importFrom(scran,calculateSumFactors)
 importFrom(stats,acf)
+importFrom(stats,ar)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,rgamma)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(stats,var)
 importFrom(stats4,plot)
 importFrom(utils,packageVersion)
