--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assayNames)
+importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(coda,HPDinterval)
 importFrom(coda,effectiveSize)
