--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,28 +10,28 @@ Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         person("Sylvia", "Richardson", role = c("ctb")), 
         person("John", "Marioni", role=c("ctb"))) 
 Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
- heterogeneity in gene expression levels in seemingly homogeneous populations 
- of cells. However, these experiments are prone to high levels of technical 
- noise, creating new challenges for identifying genes that show genuine 
- heterogeneous expression within the population of cells under study. BASiCS 
- (Bayesian Analysis of Single-Cell Sequencing data) is an integrated Bayesian 
- hierarchical model to perform statistical analyses of single-cell RNA 
- sequencing datasets in the context of supervised experiments (where the groups 
- of cells of interest are known a priori, e.g. experimental conditions or cell 
- types). BASiCS performs built-in data normalisation (global scaling) and 
- technical noise quantification (based on spike-in genes). BASiCS provides an 
- intuitive detection criterion for highly (or lowly) variable genes within a 
- single group of cells. Additionally, BASiCS can compare gene expression 
- patterns between two or more pre-specified groups of cells. Unlike traditional 
- differential expression tools, BASiCS quantifies changes in expression that lie 
- beyond comparisons of means, also allowing the study of changes in cell-to-cell 
- heterogeneity. The latter can be quantified via a biological over-dispersion 
- parameter that measures the excess of variability that is observed with respect 
- to Poisson sampling noise, after normalisation and technical noise removal. 
- Due to the strong mean/over-dispersion confounding that is typically observed 
- for scRNA-seq datasets, BASiCS also tests for changes in residual 
- over-dispersion, defined by residual values with respect to a global 
- mean/over-dispersion trend. 
+    heterogeneity in gene expression levels in seemingly homogeneous populations 
+    of cells. However, these experiments are prone to high levels of technical 
+    noise, creating new challenges for identifying genes that show genuine 
+    heterogeneous expression within the population of cells under study. BASiCS 
+    (Bayesian Analysis of Single-Cell Sequencing data) is an integrated Bayesian 
+    hierarchical model to perform statistical analyses of single-cell RNA 
+    sequencing datasets in the context of supervised experiments (where the groups 
+    of cells of interest are known a priori, e.g. experimental conditions or cell 
+    types). BASiCS performs built-in data normalisation (global scaling) and 
+    technical noise quantification (based on spike-in genes). BASiCS provides an 
+    intuitive detection criterion for highly (or lowly) variable genes within a 
+    single group of cells. Additionally, BASiCS can compare gene expression 
+    patterns between two or more pre-specified groups of cells. Unlike traditional 
+    differential expression tools, BASiCS quantifies changes in expression that lie 
+    beyond comparisons of means, also allowing the study of changes in cell-to-cell 
+    heterogeneity. The latter can be quantified via a biological over-dispersion 
+    parameter that measures the excess of variability that is observed with respect 
+    to Poisson sampling noise, after normalisation and technical noise removal. 
+    Due to the strong mean/over-dispersion confounding that is typically observed 
+    for scRNA-seq datasets, BASiCS also tests for changes in residual 
+    over-dispersion, defined by residual values with respect to a global 
+    mean/over-dispersion trend. 
 License: GPL (>= 2)
 Depends:
     R (>= 3.6.0),
@@ -56,7 +56,8 @@ Imports:
     SummarizedExperiment,
     viridis,
     utils,
-    Matrix
+    Matrix,
+    assertthat
 Suggests:
     BiocStyle,
     knitr,
