--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(BASiCS_EffectiveSize)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
 export(BASiCS_MCMC)
+export(BASiCS_PriorParam)
 export(BASiCS_ShowFit)
 export(BASiCS_Sim)
 export(BASiCS_TestDE)
@@ -60,6 +61,7 @@ importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,colData)
+importFrom(assertthat,assert_that)
 importFrom(coda,HPDinterval)
 importFrom(coda,effectiveSize)
 importFrom(coda,mcmc)
