Use .Fun rather than HiddenFun, tidy MCMC calling code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,3 +76,44 @@ BugReports: https://github.com/catavallejos/BASiCS/issues
 RoxygenNote: 7.0.2
 Encoding: UTF-8
 LazyData: true
+Collate: 
+    'AllGenerics.R'
+    'BASiCS_CorrectOffset.R'
+    'BASiCS_DenoisedCounts.R'
+    'BASiCS_DenoisedRates.R'
+    'BASiCS_DetectHVG_LVG.R'
+    'BASiCS_DiagHist.R'
+    'BASiCS_DiagPlot.R'
+    'BASiCS_DivideAndConquer.R'
+    'BASiCS_Draw.R'
+    'BASiCS_EffectiveSize.R'
+    'BASiCS_Filter.R'
+    'BASiCS_LoadChain.R'
+    'BASiCS_MCMC.R'
+    'BASiCS_Package.R'
+    'BASiCS_PriorParam.R'
+    'BASiCS_ShowFit.R'
+    'BASiCS_Sim.R'
+    'BASiCS_TestDE.R'
+    'BASiCS_VarThresholdSearchHVG_LVG.R'
+    'BASiCS_VarianceDecomp.R'
+    'Classes.R'
+    'HiddenBASiCS_Sim.R'
+    'HiddenHeaderBASiCS_Sim.R'
+    'HiddenHeaderDetectHVG_LVG.R'
+    'HiddenHeaderTest_DE.R'
+    'HiddenPlotsDetectHVG_LVG.R'
+    'HiddenVarDecomp.R'
+    'utils_Misc.R'
+    'Methods.R'
+    'RcppExports.R'
+    'combine_subposteriors.R'
+    'data.R'
+    'makeExampleBASiCS_Data.R'
+    'newBASiCS_Chain.R'
+    'newBASiCS_Data.R'
+    'utils_Data.R'
+    'utils_MCMC.R'
+    'utils_Store.R'
+    'utils_Tests.R'
+    'welcome.R'
