--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.9.26
-Date: 2020-03-25
+Version: 2.0.0
+Date: 2020-04-01
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
@@ -34,6 +34,7 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
     mean/over-dispersion trend. 
 License: GPL (>= 2)
 Depends:
+    R (>= 3.6.0),
     SingleCellExperiment
 Imports:
     Biobase,
@@ -57,12 +58,15 @@ Imports:
     utils,
     Matrix,
     matrixStats,
-    assertthat
+    assertthat,
+    reshape2,
+    hexbin
 Suggests:
     BiocStyle,
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    magick
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
 biocViews: ImmunoOncology, Normalization, Sequencing, RNASeq, Software, 
@@ -72,10 +76,11 @@ SystemRequirements: C++11
 NeedsCompilation: yes
 URL: https://github.com/catavallejos/BASiCS
 BugReports: https://github.com/catavallejos/BASiCS/issues
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Encoding: UTF-8
 LazyData: true
 Collate: 
+    'AllClasses.R'
     'AllGenerics.R'
     'BASiCS_CorrectOffset.R'
     'BASiCS_DenoisedCounts.R'
@@ -89,18 +94,17 @@ Collate:
     'BASiCS_LoadChain.R'
     'BASiCS_MCMC.R'
     'BASiCS_Package.R'
+    'BASiCS_PlotDE.R'
+    'BASiCS_PlotOffset.R'
     'BASiCS_PriorParam.R'
     'BASiCS_ShowFit.R'
     'BASiCS_Sim.R'
     'BASiCS_TestDE.R'
     'BASiCS_VarThresholdSearchHVG_LVG.R'
     'BASiCS_VarianceDecomp.R'
-    'Classes.R'
     'HiddenBASiCS_Sim.R'
     'HiddenHeaderBASiCS_Sim.R'
-    'HiddenHeaderDetectHVG_LVG.R'
     'HiddenHeaderTest_DE.R'
-    'HiddenPlotsDetectHVG_LVG.R'
     'HiddenVarDecomp.R'
     'utils_Misc.R'
     'Methods.R'
