--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(BASiCS_DenoisedCounts)
 export(BASiCS_DenoisedRates)
 export(BASiCS_DetectHVG)
 export(BASiCS_DetectLVG)
+export(BASiCS_DetectVG)
 export(BASiCS_DiagHist)
 export(BASiCS_DiagPlot)
 export(BASiCS_Draw)
@@ -12,39 +13,46 @@ export(BASiCS_EffectiveSize)
 export(BASiCS_Filter)
 export(BASiCS_LoadChain)
 export(BASiCS_MCMC)
+export(BASiCS_PlotDE)
+export(BASiCS_PlotOffset)
+export(BASiCS_PlotVG)
 export(BASiCS_PriorParam)
 export(BASiCS_ShowFit)
 export(BASiCS_Sim)
 export(BASiCS_TestDE)
 export(BASiCS_VarThresholdSearchHVG)
 export(BASiCS_VarThresholdSearchLVG)
+export(BASiCS_VarThresholdSearchVG)
 export(BASiCS_VarianceDecomp)
 export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
 export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
+export(displayChainBASiCS)
+export(displaySummaryBASiCS)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
+exportMethods("[")
+exportMethods("[[")
+exportMethods("rowData<-")
+exportMethods(BASiCS_PlotDE)
 exportMethods(Summary)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(displayChainBASiCS)
 exportMethods(displaySummaryBASiCS)
+exportMethods(format)
 exportMethods(plot)
+exportMethods(rowData)
 exportMethods(show)
 exportMethods(subset)
 exportMethods(updateObject)
 importClassesFrom(Biobase,Versioned)
 importFrom(KernSmooth,bkde2D)
 importFrom(MASS,mvrnorm)
-importFrom(Matrix,colMeans)
-importFrom(Matrix,colSums)
-importFrom(Matrix,rowMeans)
-importFrom(Matrix,rowSums)
-importFrom(Matrix,t)
 importFrom(Rcpp,evalCpp)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
@@ -56,11 +64,13 @@ importFrom(SingleCellExperiment,altExp)
 importFrom(SingleCellExperiment,altExpNames)
 importFrom(SingleCellExperiment,counts)
 importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
 importFrom(assertthat,assert_that)
 importFrom(coda,HPDinterval)
 importFrom(coda,effectiveSize)
@@ -97,11 +107,13 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,smoothScatter)
+importFrom(hexbin,hexbin)
 importFrom(matrixStats,colMeans2)
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colVars)
 importFrom(matrixStats,rowMeans2)
 importFrom(matrixStats,rowMedians)
+importFrom(matrixStats,rowVars)
 importFrom(methods,.hasSlot)
 importFrom(methods,Summary)
 importFrom(methods,is)
@@ -129,4 +141,6 @@ importMethodsFrom(BiocGenerics,counts)
 importMethodsFrom(BiocGenerics,rownames)
 importMethodsFrom(BiocGenerics,subset)
 importMethodsFrom(BiocGenerics,updateObject)
+importMethodsFrom(Matrix,rowMeans)
+importMethodsFrom(Matrix,t)
 useDynLib(BASiCS)
