--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
 export(displayChainBASiCS)
 export(displaySummaryBASiCS)
+export(format)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
