--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.1.1
-Date: 2020-07-28
+Version: 2.1.2
+Date: 2020-07-29
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
@@ -117,4 +117,5 @@ Collate:
     'utils_MCMC.R'
     'utils_Store.R'
     'utils_Tests.R'
+    'utils_VG.R'
     'welcome.R'
