Change format to as.data.frame. Resolve #202, resolve #190

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ exportMethods("[[")
 exportMethods("rowData<-")
 exportMethods(BASiCS_PlotDE)
 exportMethods(Summary)
+exportMethods(as.data.frame)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(displayChainBASiCS)
@@ -52,6 +53,7 @@ exportMethods(show)
 exportMethods(subset)
 exportMethods(updateObject)
 importClassesFrom(Biobase,Versioned)
+importFrom(BiocGenerics,as.data.frame)
 importFrom(KernSmooth,bkde2D)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
