--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(SummarizedExperiment,rowData)
 importFrom(assertthat,assert_that)
 importFrom(coda,HPDinterval)
 importFrom(coda,effectiveSize)
+importFrom(coda,geweke.diag)
 importFrom(coda,mcmc)
 importFrom(cowplot,plot_grid)
 importFrom(ggExtra,ggMarginal)
