--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ importFrom(ggplot2,ylab)
 importFrom(grDevices,adjustcolor)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,nclass.FD)
+importFrom(graphics,segments)
 importFrom(hexbin,hexbin)
 importFrom(matrixStats,colMeans2)
 importFrom(matrixStats,colMedians)
