--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(BASiCS_DetectLVG)
 export(BASiCS_DetectVG)
 export(BASiCS_DiagHist)
 export(BASiCS_DiagPlot)
+export(BASiCS_DivideAndConquer)
 export(BASiCS_Draw)
 export(BASiCS_EffectiveSize)
 export(BASiCS_Filter)
@@ -28,12 +29,15 @@ export(BASiCS_diagHist)
 export(BASiCS_diagPlot)
 export(BASiCS_effectiveSize)
 export(BASiCS_showFit)
+export(combine_subposteriors)
+export(consensus_average)
 export(displayChainBASiCS)
 export(displaySummaryBASiCS)
 export(format)
 export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
+export(reorder_params)
 exportClasses(BASiCS_Chain)
 exportClasses(BASiCS_Summary)
 exportMethods("[")
