--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ importClassesFrom(Biobase,Versioned)
 importFrom(BiocGenerics,as.data.frame)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
+importFrom(Rcpp,sourceCpp)
 importFrom(S4Vectors,DataFrame)
 importFrom(SingleCellExperiment,"altExp<-")
 importFrom(SingleCellExperiment,"altExpNames<-")
