Fix without changing interface

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ importFrom(methods,slotNames)
 importFrom(scran,calculateSumFactors)
 importFrom(stats,acf)
 importFrom(stats,ar)
+importFrom(stats,density)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
