--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slotNames)
 importFrom(scran,calculateSumFactors)
+importFrom(scuttle,cleanSizeFactors)
 importFrom(stats,acf)
 importFrom(stats,ar)
 importFrom(stats,density)
