--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.3.3
-Date: 2021-04-14
+Version: 2.3.4
+Date: 2021-04-18
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
@@ -50,6 +50,7 @@ Imports:
     Rcpp (>= 0.11.3),
     S4Vectors,
     scran,
+    scuttle,
     stats,
     stats4,
     SummarizedExperiment,
