--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,9 +17,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          # - { os: windows-latest, r: 'devel', bioc: 'devel'}
-          # - { os: macOS-latest, r: 'devel', bioc: 'devel'}
-          - { os: ubuntu-latest, image: 'bioconductor/bioconductor_docker:devel'}
+          - { os: windows-latest, bioc-version: 'release'}
+          - { os: windows-latest, bioc-version: 'devel'}
+          - { os: macOS-latest, bioc-version: 'release'}
+          - { os: macOS-latest, bioc-version: 'devel'}
+          - { os: ubuntu-latest, bioc-version: 'release'}
+          - { os: ubuntu-latest, bioc-version: 'devel'}
+          # - { os: ubuntu-latest, image: 'bioconductor/bioconductor_docker:devel'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -31,8 +35,14 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
 
+      # - name: Set up R
+      #   uses: r-lib/actions/setup-r@master
+      #   if: matrix.config.image == null
+      #   with:
+      #     r-version: ${{ matrix.config.r }}
+
       - name: Set up R
-        uses: r-lib/actions/setup-r@master
+        uses: grimbough/bioc-actions/setup-bioc@v1-branch
         if: matrix.config.image == null
         with:
           r-version: ${{ matrix.config.r }}
