--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -23,7 +23,6 @@ jobs:
           - { os: macOS-latest, bioc: 'devel'}
           - { os: ubuntu-latest, bioc: 'release'}
           - { os: ubuntu-latest, bioc: 'devel'}
-          # - { os: ubuntu-latest, image: 'bioconductor/bioconductor_docker:devel'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -35,87 +34,40 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
 
-      # - name: Set up R
-      #   uses: r-lib/actions/setup-r@master
-      #   if: matrix.config.image == null
-      #   with:
-      #     r-version: ${{ matrix.config.r }}
-
       - name: Set up R
         uses: grimbough/bioc-actions/setup-bioc@v1
         if: matrix.config.image == null
         with:
           bioc-version: ${{ matrix.config.bioc }}
 
+      - name: Install magick dependencies
+        if: runner.os == 'macOS'
+        run: |
+          brew install imagemagick
+          brew install ffmpeg
+
+      - name: Install dependencies
+        uses: r-lib/actions/setup-r-dependencies@v1
+        with:
+          extra-packages: rcmdcheck, optparse, magick, BiocManager
+
+
+      - name: Install BiocCheck
+        if: runner.os == 'Linux'
+        run: BiocManager::install("BiocCheck")
+        shell: Rscript {0}
+
       - name: Set up pandoc
         uses: r-lib/actions/setup-pandoc@master
         if: matrix.config.image == null
 
-      - name: Install remotes
-        run: |
-          install.packages('remotes')
-        shell: Rscript {0}
-
-      # - name: Set BiocManager version
-      #   if: matrix.config.image == null
-      #   run: |
-      #     install.packages('BiocManager')
-      #     BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE)
-      #   shell: Rscript {0}
-
-      - name: Query dependencies
-        run: |
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE, repos = c(getOption('repos'), BiocManager::repositories())), 'depends.Rds', version = 2)
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        if: runner.os != 'Windows' && matrix.config.image == null
-        uses: actions/cache@v1
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-r-${{ matrix.config.r }}-bioc-${{ matrix.config.bioc }}-${{ hashFiles('depends.Rds') }}
-          restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-bioc-${{ matrix.config.bioc }}-
-
-      - name: Install system dependencies
-        if: runner.os == 'Linux'
-        env:
-          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
-        run: |
-          Rscript -e "remotes::install_github('r-hub/sysreqs')"
-          sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
-          sudo -s eval "$sysreqs"
-          sudo apt-get update && sudo apt-get -y install libcurl4-openssl-dev libglpk-dev
-
-      - name: Install dependencies
-        run: |
-          local_deps <- remotes::local_package_deps(dependencies = TRUE)
-          deps <- remotes::dev_package_deps(dependencies = TRUE, repos = BiocManager::repositories())
-          BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
-          remotes::install_cran('rcmdcheck', Ncpu = 2L)
-        shell: Rscript {0}
-
-      - name: Session info
-        run: |
-          options(width = 100)
-          pkgs <- installed.packages()[, "Package"]
-          sessioninfo::session_info(pkgs, include_base = TRUE)
-        shell: Rscript {0}
-
       - name: Check
-        run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error", check_dir = "check")
-        shell: Rscript {0}
-
+        uses: r-lib/actions/check-r-package@v1
 
       - name: BiocCheck
-        uses: insightsengineering/bioc-check-action@v1
-
-
-      - name: Upload check results
-        if: failure()
-        uses: actions/upload-artifact@master
-        with:
-          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
-          path: check
+        if: runner.os == 'Linux'
+        run: BiocCheck::BiocCheck(dir('check', 'tar.gz$', full.names = TRUE), `quit-with-status` = TRUE)
+        shell: Rscript {0}
 
       - name: Show testthat output
         if: always()
