--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(makeExampleBASiCS_Data)
 export(newBASiCS_Chain)
 export(newBASiCS_Data)
 exportClasses(BASiCS_Chain)
+exportClasses(BASiCS_MultiChain)
 exportClasses(BASiCS_Summary)
 exportMethods("[")
 exportMethods("[[")
