--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.9.1
+Version: 2.9.2
 Date: 2022-05-04
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
@@ -80,6 +80,8 @@ BugReports: https://github.com/catavallejos/BASiCS/issues
 RoxygenNote: 7.1.2
 Encoding: UTF-8
 LazyData: true
+Config/testthat/parallel: true
+Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
     'AllGenerics.R'
