--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,7 +77,7 @@ SystemRequirements: C++11
 NeedsCompilation: yes
 URL: https://github.com/catavallejos/BASiCS
 BugReports: https://github.com/catavallejos/BASiCS/issues
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Encoding: UTF-8
 LazyData: true
 Config/testthat/parallel: true
@@ -101,6 +101,7 @@ Collate:
     'BASiCS_Package.R'
     'BASiCS_PlotDE.R'
     'BASiCS_PlotOffset.R'
+    'BASiCS_PlotVarianceDecomp.R'
     'BASiCS_PriorParam.R'
     'BASiCS_ShowFit.R'
     'BASiCS_Sim.R'
