--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.9.1
+Version: 2.9.2
 Date: 2022-05-04
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
@@ -77,9 +77,11 @@ SystemRequirements: C++11
 NeedsCompilation: yes
 URL: https://github.com/catavallejos/BASiCS
 BugReports: https://github.com/catavallejos/BASiCS/issues
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Encoding: UTF-8
 LazyData: true
+Config/testthat/parallel: true
+Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
     'AllGenerics.R'
@@ -99,6 +101,7 @@ Collate:
     'BASiCS_Package.R'
     'BASiCS_PlotDE.R'
     'BASiCS_PlotOffset.R'
+    'BASiCS_PlotVarianceDecomp.R'
     'BASiCS_PriorParam.R'
     'BASiCS_ShowFit.R'
     'BASiCS_Sim.R'
