--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.9.5
-Date: 2022-07-29
+Version: 2.9.6
+Date: 2022-09-05
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
@@ -101,6 +101,7 @@ Collate:
     'BASiCS_Package.R'
     'BASiCS_PlotDE.R'
     'BASiCS_PlotOffset.R'
+    'BASiCS_PlotVG.R'
     'BASiCS_PlotVarianceDecomp.R'
     'BASiCS_PriorParam.R'
     'BASiCS_ShowFit.R'
