--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.9.7
-Date: 2022-09-06
+Version: 2.9.8
+Date: 2022-09-19
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut"),
         email="catalina.vallejos@igmm.ed.ac.uk"), 
         person("Nils", "Eling", role=c("aut")), 
@@ -56,7 +56,7 @@ Imports:
     SummarizedExperiment,
     viridis,
     utils,
-    Matrix,
+    Matrix (>= 1.5.0),
     matrixStats,
     assertthat,
     reshape2,
