--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,24 +83,39 @@ importFrom(coda,mcmc)
 importFrom(cowplot,plot_grid)
 importFrom(ggExtra,ggMarginal)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,aes_string)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_hex)
+importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_violin)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_colour_brewer)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_log10)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
+importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(grDevices,adjustcolor)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,nclass.FD)
