Add rhat diagnostic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slotNames)
+importFrom(posterior,rhat)
 importFrom(scran,calculateSumFactors)
 importFrom(scuttle,cleanSizeFactors)
 importFrom(stats,acf)
