--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -86,6 +86,7 @@ Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
     'AllGenerics.R'
+    'BASiCS_CalculateSpikeIns.R'
     'BASiCS_CorrectOffset.R'
     'BASiCS_DenoisedCounts.R'
     'BASiCS_DenoisedRates.R'
