Fix ERCC calculation fun

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,6 +68,7 @@ Suggests:
     knitr,
     rmarkdown,
     testthat,
+    scRNAseq,
     magick
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
@@ -86,7 +87,7 @@ Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
     'AllGenerics.R'
-    'BASiCS_CalculateSpikeIns.R'
+    'BASiCS_CalculateERCC.R'
     'BASiCS_CorrectOffset.R'
     'BASiCS_DenoisedCounts.R'
     'BASiCS_DenoisedRates.R'
