Fix aes warnings about undefined globals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ importFrom(coda,geweke.diag)
 importFrom(coda,mcmc)
 importFrom(cowplot,plot_grid)
 importFrom(ggExtra,ggMarginal)
+importFrom(ggplot2,.data)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,element_blank)
@@ -139,6 +140,7 @@ importFrom(scuttle,cleanSizeFactors)
 importFrom(stats,acf)
 importFrom(stats,ar)
 importFrom(stats,density)
+importFrom(stats,lag)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
